projects/vb6parse/snapshots/parsers/cst/filesystem/rmdir/rmdir_preserves_whitespace.snap
---
source: projects/vb6parse/tests/filesystem/rmdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: RmDirStatement
      children:
        - kind: RmDirKeyword
          text: RmDir
        - kind: Whitespace
          text: "    "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"C:\\Temp\""
    - kind: Whitespace
      text: "    "
